--- a/fitur2.html
+++ b/fitur2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -51,7 +52,7 @@
       color: #555;
       font-size: 0.95em;
     }
-    input, select {
+    input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ccc;
@@ -181,19 +182,6 @@
       <a href="index.html">🔙 Kembali ke Beranda</a>
     </div>
 
-    <!-- 🔽 TAMBAHAN: Dropdown Pilih Market -->
-    <div class="input-section">
-      <label for="marketSelect">Pilih Market (Opsional)</label>
-      <select id="marketSelect">
-        <option value="">-- Pilih Market --</option>
-        <option value="sgp">SGP</option>
-        <option value="taiwan">TAIWAN</option>
-        <option value="hongkong">HONGKONG</option>
-        <option value="sidney">SIDNEY</option>
-        <option value="china">CHINA</option>
-      </select>
-    </div>
-
     <div class="input-section">
       <label for="currResult">4D Result Sekarang</label>
       <input type="text" id="currResult" placeholder="Contoh: 7890" maxlength="4" />
@@ -226,79 +214,8 @@
     <div class="results" id="resultsContainer"></div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyALc-1SYjzRUcB-Ws01rab1mxlmcv2e6dA",
-      authDomain: "nomoromosse.firebaseapp.com",
-      databaseURL: "https://nomoromosse-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "nomoromosse",
-      storageBucket: "nomoromosse.firebasestorage.app",
-      messagingSenderId: "985183830784",
-      appId: "1:985183830784:web:fae21bdb94c1f0103769e5"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    // ─── TAMBAHAN: Fungsi Load Data Market ───────────────────────────────
-    async function loadMarketData(marketKey) {
-      const statusEl = document.getElementById('error');
-      statusEl.textContent = "Mengambil data " + marketKey + "...";
-      statusEl.style.display = 'block';
-      statusEl.style.color = '#1a73e8';
-
-      const marketRef = ref(db, 'fitur1/markets/' + marketKey);
-      try {
-        const snapshot = await new Promise((resolve, reject) => {
-          const timeout = setTimeout(() => reject(new Error("Timeout")), 5000);
-          onValue(marketRef, (snap) => { clearTimeout(timeout); resolve(snap); }, (err) => { clearTimeout(timeout); reject(err); });
-        });
-
-        const data = snapshot.val();
-        let results = [];
-
-        if (data === null || data === undefined) {
-        } else if (Array.isArray(data)) {
-          results = data.filter(v => typeof v === 'string' && /^\d{4}$/.test(v));
-        } else if (typeof data === 'object') {
-          const entries = Object.entries(data)
-            .filter(([k, v]) => typeof v === 'string' && /^\d{4}$/.test(v))
-            .sort((a, b) => a[0].localeCompare(b[0]));
-          results = entries.map(([k, v]) => v);
-        } else if (typeof data === 'string' && /^\d{4}$/.test(data)) {
-          results = [data];
-        }
-
-        if (results.length < 2) {
-          statusEl.textContent = "⚠️ Data " + marketKey + " tidak cukup (min. 2 hasil).";
-          return;
-        }
-
-        const prev4D = results[results.length - 2];
-        const curr4D = results[results.length - 1];
-
-        document.getElementById('result4DLalu').value = prev4D;
-        document.getElementById('currResult').value = curr4D;
-        statusEl.style.display = 'none';
-      } catch (err) {
-        console.error("Gagal muat ", err);
-        statusEl.textContent = "❌ Gagal muat data " + marketKey;
-      }
-    }
-
-    // ─── SISIPKAN EVENT UNTUK DROPDOWN ───────────────────────────────────
-    document.getElementById('marketSelect').addEventListener('change', function () {
-      const market = this.value;
-      if (market) {
-        loadMarketData(market);
-      }
-    });
-
-    // ─── SISANYA: SAMA PERSIS DENGAN KODE ASLI ────────────────────────────
+  <script>
+    // ─── KONSTANTA & FUNGSI BANTUAN ─────────────────────────────────────
     const SHIO_TO_2D = {
       1: ["01","13","25","37","49","61","73","85","97"],
       2: ["02","14","26","38","50","62","74","86","98"],
@@ -341,6 +258,7 @@
       return Array.from({length: 100}, (_, i) => i.toString().padStart(2, '0'));
     }
 
+    // ─── RUMUS SHIO LEMAH (1–14) ─────────────────────────────────────────
     function getShioLemahSet(tglSeb, tglSkr, empatDLalu, empatDSkr) {
       const rumusSets = Array(14).fill().map(() => new Set());
       let str4D = empatDSkr.toString().padStart(4, '0');
@@ -407,6 +325,7 @@
       return rumusSets;
     }
 
+    // ─── KONTROL B–N & O ─────────────────────────────────────────────────
     const KONTROL_B = {1:["1","2","6","7","8","9"],2:["0","2","3","7","8","9"],3:["0","1","3","4","8","9"],4:["0","1","2","4","5","9"],5:["0","1","2","3","5","6"],6:["1","2","3","4","6","7"],7:["2","3","4","5","7","8"],8:["3","4","5","6","8","9"],9:["0","4","5","6","7","9"],0:["1","2","3","4","5","6"]};
     const KONTROL_C = {0:["3","4","5","6","8","9"],1:["0","2","3","4","6","9"],2:["1","2","3","5","6","8"],3:["0","1","2","3","4","9"],4:["1","2","3","6","8","9"],5:["0","1","2","3","4","5","9"],6:["0","2","3","5","6","9"],7:["0","1","2","3","8","9"],8:["2","3","4","6","7","9"],9:["1","2","3","4","5","6"]};
     const KONTROL_D = KONTROL_B;
@@ -490,6 +409,7 @@
     };
     const get2DSetFromO = (curr) => new Set(rumusSinCosSliding(curr));
 
+    // ─── HITUNG SEMUA ────────────────────────────────────────────────────
     function calculateAll(currResult, tglSeb, tglSkr, resultLalu) {
       const setB = get2DSetFromB(currResult);
       const setC = get2DSetFromC(currResult);
@@ -540,6 +460,7 @@
       return { freqMap, notCaught };
     }
 
+    // ─── FUNGSI SALIN ────────────────────────────────────────────────────
     function copyToClipboard(text) {
       if (navigator.clipboard && window.isSecureContext) {
         return navigator.clipboard.writeText(text);
@@ -556,10 +477,12 @@
       }
     }
 
+    // ─── TAMPILKAN HASIL ─────────────────────────────────────────────────
     function displayResults(freqMap, notCaught) {
       const container = document.getElementById('resultsContainer');
       container.innerHTML = '';
 
+      // ❌ Tidak Terjaring
       const notCaughtSection = document.createElement('div');
       notCaughtSection.className = 'section';
       notCaughtSection.innerHTML = `
@@ -568,6 +491,7 @@
       `;
       container.appendChild(notCaughtSection);
 
+      // 🎯 Terjaring 1x–28x
       if (Object.keys(freqMap).length === 0) {
         container.innerHTML += '<div class="section"><h2>🎯 Tidak ada 2D yang terjaring</h2></div>';
       } else {
@@ -587,6 +511,7 @@
         }
       }
 
+      // 📌 RANGKUMAN FINAL
       const summaryBase = [
         ...notCaught,
         ...(freqMap[1] || []),
@@ -595,7 +520,7 @@
         ...(freqMap[4] || [])
       ];
       const summarySet = new Set(summaryBase);
-      TWIN_NUMBERS.forEach(twin => summarySet.add(twin));
+      TWIN_NUMBERS.forEach(twin => summarySet.add(twin)); // ✅ Semua twin dipaksa masuk
       const summaryList = Array.from(summarySet).sort();
       const summaryText = summaryList.join('*') + '#';
 
@@ -610,6 +535,7 @@
       `;
       container.appendChild(summarySection);
 
+      // Salin Rangkuman Final
       document.getElementById('copyFinalBtn').onclick = () => {
         copyToClipboard(summaryText).then(() => {
           const notice = document.createElement('div');
@@ -625,6 +551,7 @@
       };
     }
 
+    // ─── LOCALSTORAGE ────────────────────────────────────────────────────
     const STORAGE_KEY = 'fitur2_data';
 
     function saveToStorage() {
@@ -649,6 +576,7 @@
           document.getElementById('result4DLalu').value = data.result4DLalu || '';
           if (data.resultsHTML) {
             document.getElementById('resultsContainer').innerHTML = data.resultsHTML;
+            // Re-attach copy listener
             const copyBtn = document.getElementById('copyFinalBtn');
             if (copyBtn) {
               copyBtn.onclick = () => {
@@ -684,6 +612,7 @@
       document.getElementById('error').style.display = 'none';
     }
 
+    // ─── EVENT HANDLERS ──────────────────────────────────────────────────
     document.getElementById('saveBtn').addEventListener('click', () => {
       const curr = document.getElementById('currResult').value.trim();
       const tglSeb = document.getElementById('tanggalSebelum').value.trim();
@@ -742,7 +671,7 @@
       try {
         const { freqMap, notCaught } = calculateAll(currResult, tglSebNum, tglSkrNum, resultLaluNum);
         displayResults(freqMap, notCaught);
-        saveToStorage();
+        saveToStorage(); // Simpan otomatis setelah generate
       } catch (e) {
         errorEl.textContent = 'Terjadi kesalahan saat memproses.';
         errorEl.style.display = 'block';
@@ -754,6 +683,7 @@
       if (e.key === 'Enter') document.getElementById('generateBtn').click();
     });
 
+    // ─── MUAT SAAT HALAMAN DIBUKA ────────────────────────────────────────
     window.addEventListener('DOMContentLoaded', loadFromStorage);
   </script>
 </body>
