--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
     <a href="fitur6.html" class="feature-btn">hasil</a>
     <a href="fitur7.html" class="feature-btn">nota</a>
     <a href="fitur8.html" class="feature-btn">6digit</a>
-    <a href="fitur9.html" class="feature-btn">belum1</a>
+    <a href="fitur9.html" class="feature-btn">dasar</a>
     <a href="fitur10.html" class="feature-btn">belum2</a>
   </main>
 </body>
 
 </html>
+
 
