--- a/fitur1.html
+++ b/fitur1.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -5,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>data market</title>
   <style>
+    /* === GAYA SAMA SEPERTI SEBELUMNYA === */
     * {
       margin: 0;
       padding: 0;
@@ -136,13 +139,28 @@
   <div id="status"></div>
   <div id="fitur1-container"></div>
 
-  <!-- 🔥 Firebase SDK (versi 8.10.1 - non-module) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-  <script src="firebase-config.js"></script>
+  <!-- Firebase SDK -->
+  <script type="module">
+    // === IMPOR MODUL FIREBASE ===
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-  <script>
-    // === SEMUA KONSTANTA & FUNGSI PERHITUNGAN (100% DIPERTAHANKAN) ===
+    // === KONFIGURASI FIREBASE ANDA ===
+    const firebaseConfig = {
+      apiKey: "AIzaSyALc-1SYjzRUcB-Ws01rab1mxlmcv2e6dA",
+      authDomain: "nomoromosse.firebaseapp.com",
+      databaseURL: "https://nomoromosse-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "nomoromosse",
+      storageBucket: "nomoromosse.firebasestorage.app",
+      messagingSenderId: "985183830784",
+      appId: "1:985183830784:web:fae21bdb94c1f0103769e5"
+    };
+
+    // Inisialisasi Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+
+    // === KONSTANTA & FUNGSI PERHITUNGAN (SAMA SEPERTI ASLI) ===
     const TABLE_HEADERS = ["res", "B", "C", "D", "G", "H", "I", "J", "K", "R", "Y", "A", "M", "N", "L"];
     const ACTION_HEADER = "Aksi";
     const KONTROL_B = {1:["1","2","6","7","8","9"],2:["0","2","3","7","8","9"],3:["0","1","3","4","8","9"],4:["0","1","2","4","5","9"],5:["0","1","2","3","5","6"],6:["1","2","3","4","6","7"],7:["2","3","4","5","7","8"],8:["3","4","5","6","8","9"],9:["0","4","5","6","7","9"],0:["1","2","3","4","5","6"]};
@@ -158,7 +176,8 @@
     const KONTROL_M = {0:["9","0","1","2","3"],1:["8","9","0","1","2"],2:["3","4","5","6","7"],3:["3","4","5","6","7"],4:["5","6","7","8","9"],5:["0","1","2","3","4"],6:["7","8","9","0","1"],7:["2","3","4","5","6"],8:["1","2","3","4","5"],9:["4","5","6","7","8"]};
     const KONTROL_N = {0:["1","4","6","9"],1:["0","2","5","7"],2:["1","3","6","8"],3:["2","4","7","9"],4:["0","3","5","8"],5:["6","4","1","9"],6:["7","5","0","2"],7:["8","6","3","1"],8:["9","7","4","2"],9:["0","8","5","3"]};
 
-    // === FUNGSI PERHITUNGAN (tidak diubah sedikit pun) ===
+    // --- Fungsi calculateKontrolB hingga calculateKontrolN: SAMA SEPERTI ASLI ---
+    // (Disingkat di sini untuk efisiensi — semua fungsi disalin utuh dari kode asli Anda)
     function calculateKontrolB(resSourceValue, resTargetValue) {
       if (!/^\d+$/.test(resSourceValue) || resSourceValue.length < 2 || !/^\d+$/.test(resTargetValue) || resTargetValue.length < 2) {
         return { value: "", isError: false };
@@ -180,6 +199,9 @@
       if (resultDigits.length > 0) return { value: resultDigits.join(''), isError: false };
       else return { value: "X", isError: true };
     }
+
+    // (Fungsi calculateKontrolC hingga calculateKontrolN: disalin utuh seperti di file asli Anda)
+    // ... [fungsi-fungsi lainnya tetap sama] ...
 
     function calculateKontrolC(resSourceValue, resTargetValue) {
       const kepalaSource = resSourceValue[2];
@@ -411,7 +433,7 @@
       else return { value: "X", isError: true };
     }
 
-    // === LOGIKA TABEL ===
+    // === LOGIKA TABEL & PERHITUNGAN ===
     function calculateRow(targetRow) {
       const tbody = targetRow.parentElement;
       const allRows = Array.from(tbody.querySelectorAll('tr'));
@@ -509,6 +531,7 @@
           const next = row.nextElementSibling;
           row.remove();
           if (next) recalculateFrom(next);
+          // Simpan otomatis setelah hapus
           const tableId = row.closest('table').id;
           saveDataToFirebase(tableId);
         }
@@ -519,7 +542,7 @@
       tr.querySelector('input').addEventListener('input', () => {
         const tableId = tr.closest('table').id;
         recalculateFrom(tr);
-        saveDataToFirebase(tableId);
+        saveDataToFirebase(tableId); // Auto-save saat input berubah
       });
       return tr;
     }
@@ -532,7 +555,7 @@
       saveDataToFirebase(tableId);
     }
 
-    // === FIREBASE INTEGRATION (non-module) ===
+    // === FIREBASE: SIMPAN & MUAT DATA ===
     function showStatus(msg, isSuccess = true) {
       const statusEl = document.getElementById('status');
       statusEl.textContent = msg;
@@ -540,12 +563,12 @@
       setTimeout(() => statusEl.textContent = '', 3000);
     }
 
-    function saveDataToFirebase(tableId) {
+    async function saveDataToFirebase(tableId) {
       try {
         const table = document.getElementById(tableId);
         const rows = Array.from(table.querySelectorAll("tbody tr"));
         const data = rows.map(row => Array.from(row.querySelectorAll("input")).map(inp => inp.value));
-        firebase.database().ref(`data-market/${tableId}`).set(data);
+        await set(ref(database, `data-market/${tableId}`), data);
         showStatus(`✓ ${tableId} disimpan`, true);
       } catch (error) {
         console.error("Gagal simpan ke Firebase:", error);
@@ -553,32 +576,31 @@
       }
     }
 
-    function loadDataFromFirebase(tableId) {
+    async function loadDataFromFirebase(tableId) {
       const tbody = document.getElementById(tableId).querySelector("tbody");
       tbody.innerHTML = "";
-      firebase.database().ref(`data-market/${tableId}`).once('value')
-        .then(snapshot => {
-          if (snapshot.exists()) {
-            const data = snapshot.val();
-            data.forEach(rowData => {
-              const tr = createRow();
-              const inputs = tr.querySelectorAll("input");
-              rowData.forEach((val, i) => {
-                if (inputs[i]) inputs[i].value = val;
-              });
-              tbody.appendChild(tr);
+      try {
+        const snapshot = await get(ref(database, `data-market/${tableId}`));
+        if (snapshot.exists()) {
+          const data = snapshot.val();
+          data.forEach(rowData => {
+            const tr = createRow();
+            const inputs = tr.querySelectorAll("input");
+            rowData.forEach((val, i) => {
+              if (inputs[i]) inputs[i].value = val;
             });
-            const firstRow = tbody.querySelector('tr');
-            if (firstRow) recalculateFrom(firstRow);
-          } else {
-            addRow(tableId);
-          }
-        })
-        .catch(error => {
-          console.error("Gagal muat data:", error);
-          showStatus("✗ Gagal memuat data", false);
+            tbody.appendChild(tr);
+          });
+          const first = tbody.querySelector('tr');
+          if (first) recalculateFrom(first);
+        } else {
           addRow(tableId);
-        });
+        }
+      } catch (error) {
+        console.error("Gagal muat data:", error);
+        showStatus("✗ Gagal memuat data", false);
+        addRow(tableId);
+      }
     }
 
     function initMarket(marketKey) {
@@ -637,3 +659,4 @@
   </script>
 </body>
 </html>
+
